allow works to be added to collections with deposit access

--- a/app/views/hyrax/base/_form_member_of_collections.html.erb
+++ b/app/views/hyrax/base/_form_member_of_collections.html.erb
@@ -20,7 +20,7 @@ HTML Properties:
                   prompt: :translate,
                   data: {
                     autocomplete: 'collection',
-                    'autocomplete-url' => Rails.application.routes.url_helpers.qa_path + '/search/collections?access=edit'
+                    'autocomplete-url' => Rails.application.routes.url_helpers.qa_path + '/search/collections?access=deposit'
                   } %>
       <a class="btn btn-primary" data-behavior="add-relationship">Add</a>
   </div>
